@@ -1,5 +1,6 @@
 package com.igrowker.nativo.services.implementation;
 
+import com.igrowker.nativo.dtos.contribution.ResponseContributionGetDto;
 import com.igrowker.nativo.dtos.microcredit.*;
 import com.igrowker.nativo.entities.*;
 import com.igrowker.nativo.exceptions.ResourceNotFoundException;
@@ -20,6 +21,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -54,29 +56,30 @@ public class MicrocreditServiceImpl implements MicrocreditService {
     }
 
     @Override
+    @Transactional
     public List<ResponseMicrocreditGetDto> getAll() {
         List<Microcredit> microcredits = microcreditRepository.findAll();
 
-        return microcredits.stream()
-                .map(microcreditMapper::responseMicrocreditGet).toList();
+        return getResponseMicrocreditGetDtos(microcredits);
     }
 
     @Override
+    @Transactional
     public List<ResponseMicrocreditGetDto> getMicrocreditsByTransactionStatus(String transactionStatus) {
         TransactionStatus enumStatus = validations.statusConvert(transactionStatus);
+
         List<Microcredit> microcredits = microcreditRepository.findByTransactionStatus(enumStatus);
 
-        return microcredits.stream()
-                .map(microcreditMapper::responseMicrocreditGet)
-                .toList();
+        return getResponseMicrocreditGetDtos(microcredits);
     }
 
     @Override
+    @Transactional
     public ResponseMicrocreditGetDto getOne(String id) {
         Microcredit microcredit = microcreditRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Microcrédito no encontrado con id: " + id));
 
-        return microcreditMapper.responseMicrocreditGet(microcredit);
+        return getResponseMicrocreditGetDto(microcredit);
     }
 
     @Override
@@ -88,9 +91,13 @@ public class MicrocreditServiceImpl implements MicrocreditService {
         List<Microcredit> microcredits = microcreditRepository.findByTransactionStatusAndBorrowerAccountId(
                 enumStatus, userBorrower.account.getId());
 
+        if (microcredits.isEmpty()) {
+            throw new ResourceNotFoundException("No se encontraron microcréditos para el usuario con el estado especificado.");
+        }
+
         return microcredits.stream()
-                .map(microcreditMapper::responseMicrocreditGet)
-                .toList();
+                .map(this::getResponseMicrocreditGetDto)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -103,6 +110,14 @@ public class MicrocreditServiceImpl implements MicrocreditService {
 
         if (!microcredit.getBorrowerAccountId().equals(userBorrower.account.getId())) {
             throw new IllegalArgumentException("El usuario no tiene permiso para pagar este microcrédito.");
+        }
+
+        BigDecimal totalAmountToPay = microcredit.getContributions().stream()
+                .map(Contribution::getAmount)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        if (userBorrower.account.getAmount().compareTo(totalAmountToPay) < 0) {
+            throw new ValidationException("Fondos insuficientes");
         }
 
         if (microcredit.getTransactionStatus() == TransactionStatus.COMPLETED) {
@@ -143,6 +158,45 @@ public class MicrocreditServiceImpl implements MicrocreditService {
         }
     }
 
+    private List<ResponseMicrocreditGetDto> getResponseMicrocreditGetDtos(List<Microcredit> microcredits) {
+        return microcredits.stream().map(this::getResponseMicrocreditGetDto).collect(Collectors.toList());
+    }
+
+    private ResponseMicrocreditGetDto getResponseMicrocreditGetDto(Microcredit microcredit) {
+        List<ResponseContributionGetDto> contributionsDto = microcredit.getContributions().stream()
+                .map(contribution -> {
+
+                    Validations validations1 = new Validations(accountRepository, userRepository);
+
+                    String lenderFullname = validations.fullname(contribution.getLenderAccountId());
+                    String borrowerFullname = validations.fullname(microcredit.getBorrowerAccountId());
+
+                    return new ResponseContributionGetDto(
+                            contribution.getId(),
+                            contribution.getLenderAccountId(),
+                            lenderFullname,
+                            borrowerFullname,
+                            microcredit.getId(),
+                            contribution.getAmount(),
+                            contribution.getCreatedDate(),
+                            contribution.getTransactionStatus()
+                    );
+                }).collect(Collectors.toList());
+
+        return new ResponseMicrocreditGetDto(
+                microcredit.getId(),
+                microcredit.getBorrowerAccountId(),
+                microcredit.getAmount(),
+                microcredit.getRemainingAmount(),
+                microcredit.getCreatedDate(),
+                microcredit.getExpirationDate(),
+                microcredit.getTitle(),
+                microcredit.getDescription(),
+                microcredit.getTransactionStatus(),
+                contributionsDto
+        );
+    }
+
     /*
     Listar todos los microcreditos, comparar la fecha de vencimiento con la actual.
     ACCEPTED -- SE COMPLETA EL MONTO TOTAL
@@ -152,5 +206,4 @@ public class MicrocreditServiceImpl implements MicrocreditService {
     EXPIRED -- SUPERA LA FECHA DE VENCIMIENTO Y NO TIENE FONDOS ENTRA EN DEUDA.
     COMPLETED -- AL CUMPLIRSE CON EL PAGO DEL MICRO EN TERMINO
      */
-
 }
